@@ -1,6 +1,6 @@
-AC_INIT([Conky],[1.3.5dev],[brenden1@users.sourceforge.net])
+AC_INIT([Conky],[1.3.5dev2],[brenden1@users.sourceforge.net])
 
-AM_INIT_AUTOMAKE(conky, 1.3.5dev)
+AM_INIT_AUTOMAKE(conky, 1.3.5dev2)
 AM_CONFIG_HEADER(src/config.h)
 AC_PROG_LIBTOOL
 
